rti.tf
resource "aws_route" "internet_access" {
  route_table_id         = "${aws_route_table.web-public-rt.id}"
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = "${aws_internet_gateway.gw.id}"
}
